fixed design to better accomodate horizontal scroll bar

--- a/frontend/src/components/apptable/JobStatusScroll.css
+++ b/frontend/src/components/apptable/JobStatusScroll.css
@@ -1,8 +1,8 @@
 .statuses-container-outer {
 	width: 300px;
 	background-color: rgba(255, 255, 255, 0.34);
-	border-radius: 15px;
-	padding: 0px 4px;
+	border-radius: 10px;
+	padding: 2px 6px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -20,8 +20,8 @@
 	align-items: center;
 	overflow: auto;
 	white-space: nowrap;
-	padding-bottom: 3px;
-	padding-top: 3px;
+	padding: 3px 0px;
+	border-radius: 5px;
 }
 
 .statuses-container-inner::-webkit-scrollbar {
@@ -29,8 +29,8 @@
 }
 
 .statuses-container-inner::-webkit-scrollbar-thumb {
-	background-color: #fcca9c;
-	border-radius: 4px;
+	background-color: #f79132;
+	border-radius: 20px;
 }
 
 .statuses-container-inner::-webkit-scrollbar-button {
